session/register、session/post、session/deleteの実装
