# app/Http/Requests/Session/RegisterRequest.php
@@ -1,10 +1,10 @@
 <?php
 
-namespace App\Http\Requests\User;
+namespace App\Http\Requests\Session;
 
 use Illuminate\Foundation\Http\FormRequest;
 
-class CreateRequest extends FormRequest
+class RegisterRequest extends FormRequest
 {
     /**
      * Determine if the user is authorized to make this request.
@@ -22,10 +22,8 @@ class CreateRequest extends FormRequest
     public function rules(): array
     {
         return [
-            'name' => 'required|string',
+            'email' => 'required|email',
             'password' => 'required|min:8',
-            'introduction' => 'required|string',
-            'icon_attachment_id' => 'required|integer',
         ];
     }
 
@@ -37,11 +35,10 @@ class CreateRequest extends FormRequest
     public function messages(): array
     {
         return [
-            'name.required' => 'お名前は入力必須です。',
-            'password.required' => 'パスワードは入力必須です。',
+            'email.required' => 'メールアドレスは必須項目です。',
+            'email.email' => '有効なメールアドレスを入力してください。',
+            'password.required' => 'パスワードは必須項目です。',
             'password.min' => 'パスワードは少なくとも8文字以上である必要があります。',
-            'introduction.required' => '自己紹介文は入力必須です。',
-            'icon_attachment_id.required' => 'アイコン画像は必須です。',
         ];
     }
 }
