# routes/api.php
@@ -19,15 +19,10 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
+Route::post('/session/register', [SessionController::class, 'register']); // ユーザー登録
+Route::post('/session', [SessionController::class, 'login']); // ログイン
+Route::delete('/session', [SessionController::class, 'logout']); // ログアウト
+
 Route::get('/user/{userId}',[UserController::class, 'show']);
 // Route::get('/user/{userId}', 'App\Http\Controllers\UserController@show');
 Route::put('/user/{userId}',[UserController::class, 'user']);
-
-Route::post('/session', [SessionController::class, 'create']); // ログイン
-Route::delete('/session', [SessionController::class, 'destroy']); // ログアウト
-
-Route::post('/user', [UserController::class, 'create']); // ログイン
-
-// 参考記事
-// 【Laravel】SanctumでAPIトークン認証の使い方とSPA認証との比較
-// https://qiita.com/104dev/items/0787a81f7dda892ce86a
